--- a/Portfolio/app/src/main/res/values/strings.xml
+++ b/Portfolio/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="title">My Nanodegree Apps!</string>
+    <string name="click_intro">Opens the app </string>
     <string name="spotify_title">Spotify Streamer</string>
     <string name="scores_title">Scores App</string>
     <string name="library_title">Library App</string>
